--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,16 @@
+body, html {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+}
+
 #allHamsters {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .hamster-item {
@@ -12,4 +21,18 @@
 
 .hamster-item img {
     width: 100%;
+}
+
+h1 {
+    font-size: 1.8rem;
+    letter-spacing: 0.05rem;
+    font-family: Helvetica;
+    font-weight: lighter;
+}
+
+.rad {
+    font-size: 2.45rem;
+    text-transform: uppercase;
+    color: hotpink;
+    font-family: Impact, sans-serif;
 }
